--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mantine/core": "^7.3.0",
     "@mantine/hooks": "^7.3.0",
+    "@tabler/icons-react": "^2.42.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
